--- a/index.html
+++ b/index.html
@@ -1,11 +1,115 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>AJ test</title>
-  </head>
-  <body style="font-family: system-ui, sans-serif; padding: 24px;">
-    <h1>Site is live ✅</h1>
-    <p>If you can read this, GitHub Pages is working. Next we’ll paste the full site.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>AJ’s Dual-PC Showcase</title>
+  <meta name="description" content="Explore AJ’s (aka B4nsheeG4mer) dual-PC setup for streaming and gaming with photos, specs, and chill vibes." />
+  <style>
+    :root { color-scheme: dark; }
+    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif; background:#0b1220; color:#e6eefc; }
+    header { position:sticky; top:0; backdrop-filter: blur(6px); background: #0b1220cc; border-bottom:1px solid #1e2a44; }
+    .wrap { max-width: 1100px; margin: 0 auto; padding: 16px; }
+    h1 { font-size: 20px; margin: 0; }
+    .card { border:1px solid #243356; background:#0f1a33aa; border-radius: 18px; padding: 20px; }
+    .grid { display:grid; gap:16px; }
+    @media(min-width:900px){ .grid2 { grid-template-columns: 1fr 1fr; } }
+    ul { line-height: 1.7; color:#c9d7ff; }
+    .gallery { display:grid; grid-template-columns: repeat(auto-fit, minmax(240px,1fr)); gap:12px; }
+    .thumb { width:100%; aspect-ratio:16/9; object-fit:cover; border-radius:12px; border:1px solid #243356; cursor:pointer; }
+    /* lightbox */
+    #lb { position:fixed; inset:0; background:#000000e6; display:none; align-items:center; justify-content:center; z-index:50; }
+    #lb img { max-width:90vw; max-height:90vh; border-radius:16px; }
+    .navbtn { position:absolute; top:50%; transform:translateY(-50%); font-size:28px; padding:8px 12px; border:1px solid #ffffff55; background:transparent; color:#fff; border-radius:10px; cursor:pointer; }
+    #prev { left:24px; } #next { right:24px; }
+    .close { position:absolute; top:18px; right:18px; font-size:28px; border:1px solid #ffffff55; color:#fff; background:transparent; border-radius:999px; width:40px; height:40px; line-height:36px; text-align:center; cursor:pointer; }
+    a.btn { display:inline-block; padding:8px 14px; border:1px solid #2b3b63; border-radius:12px; color:#e6eefc; text-decoration:none; }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="wrap" style="display:flex; align-items:center; justify-content:space-between; gap:12px;">
+      <h1>AJ’s Dual-PC Setup <span style="opacity:.7; font-weight:500;">(aka B4nsheeG4mer)</span></h1>
+      <div style="display:flex; gap:8px;">
+        <a class="btn" href="https://twitch.tv/B4nsheeG4mer" target="_blank">Twitch</a>
+        <a class="btn" href="https://youtube.com/@B4nsheeG4mer" target="_blank">YouTube</a>
+      </div>
+    </div>
+  </header>
+
+  <main class="wrap" style="display:grid; gap:24px; padding-block:24px;">
+    <section class="card grid grid2">
+      <div>
+        <div style="font-size:12px; opacity:.8;">Chill • Inclusive • High FPS</div>
+        <h2 style="font-size:28px; margin:10px 0 6px;">Welcome!</h2>
+        <p style="color:#c9d7ff">I’m AJ (aka <b>B4nsheeG4mer</b>), a 24-year-old trans creator who loves gaming, streaming, and clean builds. This page showcases my <b>Gaming PC</b> and <b>Streaming PC</b> with pics + specs. Enjoy the ghostly blue/purple vibes ✨</p>
+      </div>
+      <div class="card" style="padding:0; overflow:hidden;">
+        <img id="hero" class="thumb" src="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=1400&auto=format&fit=crop" alt="Hero" />
+      </div>
+    </section>
+
+    <!-- Gaming PC -->
+    <section class="card">
+      <h3 style="font-size:22px; margin:0 0 8px;">🎮 Gaming PC</h3>
+      <ul>
+        <li>CPU: Intel Core i9-12900K</li>
+        <li>GPU: MSI RTX 4070 SUPER</li>
+        <li>RAM: 64GB G.Skill DDR5-6000</li>
+        <li>Storage: 980 Pro 2TB + others</li>
+        <li>Case: NZXT H9 Elite</li>
+      </ul>
+      <div class="gallery" id="gGallery">
+        <!-- Replace these URLs later with your own image links -->
+        <img class="thumb" src="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=1600&auto=format&fit=crop" alt="Gaming 1">
+        <img class="thumb" src="https://images.unsplash.com/photo-1510519138101-570d1dca3d66?q=80&w=1600&auto=format&fit=crop" alt="Gaming 2">
+        <img class="thumb" src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?q=80&w=1600&auto=format&fit=crop" alt="Gaming 3">
+      </div>
+    </section>
+
+    <!-- Streaming PC -->
+    <section class="card">
+      <h3 style="font-size:22px; margin:0 0 8px;">📹 Streaming PC</h3>
+      <ul>
+        <li>CPU: AMD Ryzen 5 5500</li>
+        <li>GPU: NVIDIA RTX 4060</li>
+        <li>Motherboard: MAG B550 TOMAHAWK MAX WIFI</li>
+        <li>RAM: 16GB DDR4-3000</li>
+        <li>Storage: T-Force 1TB</li>
+      </ul>
+      <div class="gallery" id="sGallery">
+        <!-- Replace these URLs later with your own image links -->
+        <img class="thumb" src="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=1600&auto=format&fit=crop" alt="Streaming 1">
+        <img class="thumb" src="https://images.unsplash.com/photo-1510519138101-570d1dca3d66?q=80&w=1600&auto=format&fit=crop" alt="Streaming 2">
+        <img class="thumb" src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?q=80&w=1600&auto=format&fit=crop" alt="Streaming 3">
+      </div>
+    </section>
+  </main>
+
+  <!-- Lightbox -->
+  <div id="lb">
+    <button class="close" onclick="lb.style.display='none'">×</button>
+    <button id="prev" class="navbtn">◀</button>
+    <img id="lbimg" src="" alt="Full view">
+    <button id="next" class="navbtn">▶</button>
+  </div>
+
+  <script>
+    // simple lightbox for all .thumb images
+    const lb = document.getElementById('lb');
+    const lbimg = document.getElementById('lbimg');
+    const thumbs = Array.from(document.querySelectorAll('.thumb'));
+    let idx = 0;
+    function openAt(i){ idx=i; lbimg.src = thumbs[idx].src; lb.style.display='flex'; }
+    function prev(){ idx=(idx-1+thumbs.length)%thumbs.length; lbimg.src = thumbs[idx].src; }
+    function next(){ idx=(idx+1)%thumbs.length; lbimg.src = thumbs[idx].src; }
+    thumbs.forEach((img,i)=> img.addEventListener('click', ()=> openAt(i)));
+    document.getElementById('prev').onclick = prev;
+    document.getElementById('next').onclick = next;
+    lb.addEventListener('click', e => { if(e.target===lb) lb.style.display='none'; });
+    document.addEventListener('keydown', e => {
+      if(lb.style.display==='flex'){ if(e.key==='Escape') lb.style.display='none'; if(e.key==='ArrowLeft') prev(); if(e.key==='ArrowRight') next(); }
+    });
+  </script>
+</body>
 </html>
